Add new pages and components, update styles

--- a/src/app/components/footer/Footer.module.css
+++ b/src/app/components/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: var(--secondary);
-  height: 30vh;
+  height: 325px;
   padding: 0 2rem;
 
   border-top: 1rem solid var(--white);
