--- a/src/app/components/cards/Card.module.css
+++ b/src/app/components/cards/Card.module.css
@@ -40,7 +40,7 @@
   width: 100%;
   top: 30px;
   padding: 4px 0;
-  background-color: var(--secondary);
+  background-color: var(--yellow-sage);
   color: var(--white);
   text-align: center;
   font-size: var(--step--0);
@@ -136,6 +136,7 @@
 .card__price {
   font-size: var(--step--1);
   font-weight: 700;
+  color: var(--yellow);
 }
 
 @media (max-width: 600px) {
