--- a/src/app/inmobiliaria/components/RealEstateList.module.css
+++ b/src/app/inmobiliaria/components/RealEstateList.module.css
@@ -15,7 +15,7 @@
   grid-area: list;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
   grid-gap: 2rem;
   margin: 2rem 0;
 }
