--- a/src/app/components/cards/Card.module.css
+++ b/src/app/components/cards/Card.module.css
@@ -45,7 +45,6 @@
   text-align: center;
   font-size: var(--step--0);
   font-weight: 600;
-  opacity: 0.7;
 }
 
 .card__title {
@@ -131,6 +130,10 @@
 }
 .card__footer a:hover {
   text-decoration: underline;
+}
+
+.card__footer dl {
+  margin: 0;
 }
 
 .card__price {
